--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -56,7 +56,7 @@ The subjective and debatable nature of alternate reality definitions has led to 
 %=========================================================================================================
 
 \subsection{Milgram and Kishino's Reality-Virtuality Continuum}
-\label{milgram&kishino}
+\label{background-milgram-and-kishino}
 Milgram and Kishino addressed the issue of alternate reality definitions in detail and can be accredited with introducing the terms \textit{augmented virtuality} and \textit{mixed reality} to the literature, prompted by their identification of the need for more encompassing terms to supplement the existing definitions of augmented reality~\cite{Milgram1999}.
 
 %However despite these thorough and well-reasoned definitions being published originally in 1994, much of the subsequent literature studied for this review has adopted conflicting, or at least confusing and misleading, definitions.
@@ -288,7 +288,7 @@ The concept of a bidirectional connection between real and virtual environments,
 \newpage
 
 \subsection{The Vacancy Problem}
-
+\label{background-vacancy-problem}
 One of the driving motivations behind Lifton's work was what he dubbed `the vacancy problem':
 
 \begin{quote}
@@ -399,7 +399,7 @@ Although a cross reality system as a whole might be considered a case of mixed r
 
 %However, XR systems that allow simultaneous interaction with both of their constituent environments blur this definition; using a XR platform such as that discussed in this document, a user can transition between perceiving stimuli from each of these environments (figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3}) in a manner that allows them to engage with each environment without becoming wholly vacant from the other.
 
-A further distinction between augmented reality and cross reality is made by consideration of Steed's primary environment concept (see discussion in section \ref{milgram&kishino}). For an augmented reality system the primary environment is necessarily real, as augmented reality describes systems in which virtual objects are superimposed upon a view (a background) of a real environment. However for a cross reality system one could argue that the primary environment is either real or virtual, depending upon how the user interacts with the system. For the user that walks through the real environment of a cross reality system and views their unmediated surroundings (including physical actuations triggered by events within the virtual environment), one would intuitively posit that their primary environment is real. But for the user that sits in front of a computer monitor and uses an avatar to walk through the virtual environment of the same cross reality system and hence views the avatar's virtual surroundings (including visualisations of sensor data collected from the real environment), one would posit that their primary environment is virtual. Considering figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3} again, one could say that the dashed ellipses thus represent the primary environment for a cross reality system in each of these scenarios respectively.
+A further distinction between augmented reality and cross reality is made by consideration of Steed's primary environment concept (see discussion in section \ref{background-milgram-and-kishino}). For an augmented reality system the primary environment is necessarily real, as augmented reality describes systems in which virtual objects are superimposed upon a view (a background) of a real environment. However for a cross reality system one could argue that the primary environment is either real or virtual, depending upon how the user interacts with the system. For the user that walks through the real environment of a cross reality system and views their unmediated surroundings (including physical actuations triggered by events within the virtual environment), one would intuitively posit that their primary environment is real. But for the user that sits in front of a computer monitor and uses an avatar to walk through the virtual environment of the same cross reality system and hence views the avatar's virtual surroundings (including visualisations of sensor data collected from the real environment), one would posit that their primary environment is virtual. Considering figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3} again, one could say that the dashed ellipses thus represent the primary environment for a cross reality system in each of these scenarios respectively.
 
 In relation to the vacancy problem, in scenarios wherein interaction with both real and virtual content is desirable but for which a complete virtual environment is not required, augmented reality circumvents the vacancy problem by virtue of presenting a single mixed reality environment to the user. However for scenarios wherein the use of a complete virtual environment is either beneficial or outright required, the vacancy problem must be mitigated to allow for constructive interaction with these two discrete environments; as is the aim of the cross reality paradigm.
 
