--- a/thesis.tex
+++ b/thesis.tex
@@ -209,6 +209,11 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
+\chapter*{List of Abbreviations}
+\input{abbreviations.tex}
+
+% ======= ======= ======= ======= ======= ======= =======
+
 \chapter{Introduction}
 \graphicspath{ {06_mirrorshades_studies_results/images/} }
 \input{01_introduction/introduction.tex}
