--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -69,7 +69,7 @@ It is here in the story of alternate realities that this thesis enters. Taking o
 
 \section{Objectives and Methodology}
 \label{objectivesandmethodology}
-The design and development of a new alternate reality concept required thorough theoretical comprehension and understanding of existing categories of alternate reality. However to ascertain the merit of a new alternate reality it was all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be something to base evaluation upon. While predictions and educated extrapolations can be made about the nature of such an experience through study of the results and observations of previous scenarios that explored existing categories of alternate reality, an involved assessment of a new alternate reality required that it be deployed in the real world and not remain contained to thought experiment or theoretical postulation.
+The design and development of a new alternate reality concept required thorough theoretical comprehension and understanding of existing categories of alternate reality. However to ascertain the merit of a new alternate reality it was all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be something to base evaluation upon. While predictions and educated extrapolations could be made about the nature of such an experience through study of the results and observations of previous scenarios that explored existing categories of alternate reality, an involved assessment of a new alternate reality required that it be deployed in the real world and not remain contained to thought experiment or theoretical postulation.
 
 \begin{quote}
 	\textit{``There are circumstances where the best or only way to shed light on a proposition, a principle, a material, a process or a function is to attempt to construct something, or to enact something, calculated to explore, embody or test it.''}~\cite{Archer1995}
@@ -77,7 +77,7 @@ The design and development of a new alternate reality concept required thorough 
 
 %Parallel reality aims to further address the vacancy problem, originally coined by Joshua Lifton, by allowing users to switch freely between equivalent vantage points in two complete environments, one real and the other virtual. While the cross reality systems developed by Lifton succeeded in addressing the `absence' of a person from one environment while participating in the other by introducing changes into one environment based upon triggers in the other, the ability to visually engage with both environments in the true sense of being \textit{``in more than one place (reality) at a time''} was missing from these systems.
 
-The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, involved effecting updates to several previously established models and creating the combined Milgram/Waterworth model (as explained in section \ref{combined-milgram-waterworth-model}) to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
+The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, created the combined Milgram/Waterworth model (section \ref{combined-milgram-waterworth-model}) and introduced an extended definition of the vacancy problem (section \ref{visualising-transitions-extended-vacancy}) in order to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
 
 The \textit{merit} of the parallel reality concept, however, could not be assessed through such purely theoretical means. While one could have postulated as to the experiential aspects of such a system and how they would manifest during particular tasks and scenarios, it was only through actual creation and application of a parallel reality platform that such postulations could be corroborated or refuted. Thus after the establishment of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop a parallel reality system which could be applied to real world user studies to allow collection and subsequent evaluation of empirical evidence.
 
@@ -94,7 +94,7 @@ With success of the platform, and the parallel reality concept more generally, s
 In summary the fundamental research objectives addressed by this thesis were to:
 
 \begin{enumerate}
-	\item Introduce the parallel reality concept by situating it within the larger ecosystem of existing categories of alternate reality, through a thorough exploration of existing alternate reality definitions, taxonomies and frameworks, performing updates, modifications and extensions where required.
+	\item Introduce the parallel reality concept by situating it within the larger ecosystem of existing categories of alternate reality, through a thorough exploration of existing alternate reality definitions, taxonomies and frameworks.
 	
 	\item Develop a suitable model for the illustration of experience in parallel reality scenarios, allowing not only for comparison and contrast between parallel reality and other alternate reality experiences, but also for illustration of different implementations of parallel reality experience.
 	
@@ -113,7 +113,7 @@ In summary the fundamental research objectives addressed by this thesis were to:
 
 \section{Collaborations and Publications}
 \label{collaborations-and-publications}
-While the work presented in this thesis was undertaken principally by myself, it would not have been possible were it not for collaboration. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in the Virtual Time Window and Mirrorshades projects respectively, were created by the members of the Open Virtual Worlds (OVW) research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity\footnote{\url{https://unity3d.com/}} compatible conversion of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to these reconstruction processes. Additionally the Unity model of the Jack Cole department building, that played a crucial role in the development and early testing of the Mirrorshades platform, was created by Alex Field.
+While the work presented in this thesis was undertaken principally by the author, it would not have been possible were it not for collaboration. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in the Virtual Time Window and Mirrorshades projects respectively, were created by the members of the Open Virtual Worlds (OVW) research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity\footnote{\url{https://unity3d.com/}} compatible conversion of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to these reconstruction processes. Additionally the Unity model of the Jack Cole department building, that played a crucial role in the development and early testing of the Mirrorshades platform, was created by Alex Field.
 
 All other work introduced by this thesis was undertaken by the author.
 
@@ -133,7 +133,7 @@ Co-authored peer reviewed papers that cover the process of creation and utilisat
 
 %=====================
 
-In relation to the Virtual Time Window project (see chapter \ref{chapter-vtw}), the following peer reviewed papers were produced:
+In relation to the Virtual Time Window project (chapter \ref{chapter-vtw}), the following peer reviewed papers were produced:
 
 \begin{itemize}
 
@@ -150,7 +150,7 @@ In relation to the Virtual Time Window project (see chapter \ref{chapter-vtw}), 
 
 %=====================
 
-The Cathedral reconstruction that the Virtual Time Window project (see chapter \ref{chapter-vtw}) made use of is covered in greater detail in:
+The Cathedral reconstruction that the Virtual Time Window project (chapter \ref{chapter-vtw}) made use of is covered in greater detail in:
 
 \begin{itemize}
 
@@ -161,7 +161,7 @@ The Cathedral reconstruction that the Virtual Time Window project (see chapter \
 
 %=====================
 
-The design and development of the Mirrorshades platform (see chapter \ref{chapter-mirrorshades}) was presented in a poster, with accompanying abstract, and a paper:
+The design and development of the Mirrorshades platform (chapter \ref{chapter-mirrorshades}) was presented in a poster, with accompanying abstract, and a paper:
 
 \begin{itemize}
 	%VRST
@@ -173,7 +173,7 @@ The design and development of the Mirrorshades platform (see chapter \ref{chapte
 
 %=====================
 
-Other work from the Open Virtual Worlds group was presented by myself on behalf of the authors:
+Other work from the Open Virtual Worlds group which was presented by the author:
 
 \begin{itemize}
 	
@@ -186,6 +186,8 @@ Other work from the Open Virtual Worlds group was presented by myself on behalf 
 
 %=========================================================================================================
 
+\pagebreak
+
 \section{Contributions}
 \label{intro-contributions}
 The contributions of this thesis can be summarized as follows:
@@ -196,7 +198,7 @@ The contributions of this thesis can be summarized as follows:
 	\item The introduction of the combined Milgram/Waterworth model and the extended vacancy problem definition, for visualising alternate reality experiences, including those of parallel reality systems.
 	\item Exploration into the suitability of an existing state of the art alternate reality modality of interaction (Situated Simulations) for investigation into parallel reality experience, producing the Virtual Time Window platform through extension of the Second Life client.
 	\item Development of a bespoke platform for parallel reality, dubbed Mirrorshades, that uses the Unity game engine to combine the modern virtual reality hardware of the Oculus Rift with the novel indoor positioning technology of IndoorAtlas.
-	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience, both to assess the worth of the concept and to inform future implementations.
+	\item Evaluation of the Mirrorshades platform through user studies of a real world use case studies within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience, both to assess the worth of the concept and to inform future implementations.
 	\item Creation and discussion of a set of best practices to guide future parallel reality endeavours.
 \end{itemize}
 
@@ -204,9 +206,9 @@ The contributions of this thesis can be summarized as follows:
 
 \section{Document Overview}
 
-Chapter \ref{chapter-background} surveys the ecosystem of alternate realities, including methods and taxonomies for classifying, categorising and distinguishing between different alternate reality terms, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-background} also introduces the combined Milgram/Waterworth model for illustrating parallel reality experience. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system, the Virtual Time Window, while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades HMD based parallel reality platform. Chapters \ref{chapter-eval-1} and \ref{chapter-eval-2} cover the evaluation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against a more traditional scenario in which virtual reality has already come to be used at such sites and the latter investigating the benefits and drawbacks to different approaches toward parallel reality implementation, resulting in a set of best practice recommendations. Finally chapter \ref{chapter-conclusions} concludes the body of work and postulates on avenues for further investigation into the parallel reality concept.
+Chapter \ref{chapter-background} surveys the ecosystem of alternate realities, including methods and taxonomies for classifying, categorising and distinguishing between different alternate reality terms, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-background} also introduces the combined Milgram/Waterworth model and the extended vacancy problem definition for illustrating parallel reality experience. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system, the Virtual Time Window, while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades HMD based parallel reality platform. Chapters \ref{chapter-eval-1} and \ref{chapter-eval-2} cover the evaluation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against a more traditional scenario in which virtual reality has already come to be used at such sites and the latter investigating the benefits and drawbacks to different approaches toward parallel reality implementation, resulting in a set of best practice recommendations. Finally chapter \ref{chapter-conclusions} concludes the body of work and postulates on avenues for further investigation into the parallel reality concept.
 
-Table \ref{objectives} provides an overview of the sections of the thesis in which each objective (from section \ref{objectivesandmethodology}) is addressed, along with relevant publications (from section \ref{collaborations-and-publications}).
+Table \ref{objectives} provides an overview of the sections of the thesis in which each objective (section \ref{objectivesandmethodology}) is addressed, along with relevant publications (section \ref{collaborations-and-publications}).
 
 \vspace{5mm}
 
